; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwi/extr_if_bwi_pci.c_bwi_pci_probe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwi/extr_if_bwi_pci.c_bwi_pci_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwi_dev = type { i64, i64, i32* }

@bwi_devices = common dso_local global %struct.bwi_dev* null, align 8
@BUS_PROBE_DEFAULT = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @bwi_pci_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bwi_pci_probe(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.bwi_dev*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @pci_get_device(i32 %7)
  store i64 %8, i64* %5, align 8
  %9 = load i32, i32* %3, align 4
  %10 = call i64 @pci_get_vendor(i32 %9)
  store i64 %10, i64* %6, align 8
  %11 = load %struct.bwi_dev*, %struct.bwi_dev** @bwi_devices, align 8
  store %struct.bwi_dev* %11, %struct.bwi_dev** %4, align 8
  br label %12

12:                                               ; preds = %37, %1
  %13 = load %struct.bwi_dev*, %struct.bwi_dev** %4, align 8
  %14 = getelementptr inbounds %struct.bwi_dev, %struct.bwi_dev* %13, i32 0, i32 2
  %15 = load i32*, i32** %14, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %40

17:                                               ; preds = %12
  %18 = load %struct.bwi_dev*, %struct.bwi_dev** %4, align 8
  %19 = getelementptr inbounds %struct.bwi_dev, %struct.bwi_dev* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* %5, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %36

23:                                               ; preds = %17
  %24 = load %struct.bwi_dev*, %struct.bwi_dev** %4, align 8
  %25 = getelementptr inbounds %struct.bwi_dev, %struct.bwi_dev* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* %6, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %36

29:                                               ; preds = %23
  %30 = load i32, i32* %3, align 4
  %31 = load %struct.bwi_dev*, %struct.bwi_dev** %4, align 8
  %32 = getelementptr inbounds %struct.bwi_dev, %struct.bwi_dev* %31, i32 0, i32 2
  %33 = load i32*, i32** %32, align 8
  %34 = call i32 @device_set_desc(i32 %30, i32* %33)
  %35 = load i32, i32* @BUS_PROBE_DEFAULT, align 4
  store i32 %35, i32* %2, align 4
  br label %42

36:                                               ; preds = %23, %17
  br label %37

37:                                               ; preds = %36
  %38 = load %struct.bwi_dev*, %struct.bwi_dev** %4, align 8
  %39 = getelementptr inbounds %struct.bwi_dev, %struct.bwi_dev* %38, i32 1
  store %struct.bwi_dev* %39, %struct.bwi_dev** %4, align 8
  br label %12

40:                                               ; preds = %12
  %41 = load i32, i32* @ENXIO, align 4
  store i32 %41, i32* %2, align 4
  br label %42

42:                                               ; preds = %40, %29
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local i64 @pci_get_device(i32) #1

declare dso_local i64 @pci_get_vendor(i32) #1

declare dso_local i32 @device_set_desc(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
